<resources>
    <string name="app_name">GasBuy</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="Don_Hang">Đơn hàng</string>
    <string name="so_ga">Sổ gas</string>
    <string name="qua_tang">Quà tặng</string>
    <string name="ho_tro">hỗ trợ</string>
    <string name="danh_gia">Đánh giá</string>
    <string name="cai_dat">Cài đặt</string>
    <string name="dat_mua">đặt mua</string>
    <string name="xoa_san_Pham">Xóa Sản Phẩm Khỏi Giỏ Hàng</string>
    <string name="xoa_1">Bạn muốn xóa sản phẩm </string>
    <string name="xoa_2">khỏi giỏ hàng của bạn phải không</string>
    <string name="Huy">HỦY BỎ</string>
    <string name="xoa">XÓA</string>
    <string name="tong_tien">Tổng số tiền </string>
    <string name="thay_doi">Thay đổi thông tin </string>
    <string name="Dia_chi">Địa chỉ</string>
    <string name="So_dien_thoai">Số điện thoại</string>
    <string name="ten">Tên</string>
    <string name="Dang_ky">Đăng Ký</string>
    <string name="title_activity_san_pham">SanPhamActivity</string>
    <string name="action_settings">Settings</string>
    <string name="DM_sanPham">Danh Mục Sản Phẩm </string>
    <string name="title_main">Giỏ Hàng </string>
    <string name="thong_tin">Thông tin sản phẩm</string>
    <string name="thong_so">Thông số kỹ thuật</string>
    <string name="bao_hanh">Bảo Hành</string>
    <string name="mua_ngay">Mua Ngay</string>
    <string name="tensanpham">Tên </string>
    <string name="giatien">Giá tiền</string>
    <string name="trangthai">Trạng thái</string>
    <string name="huy">Hủy</string>
    <string name="stt">STT</string>
    <string name="ngaythang">Ngày Sinh</string>
    <string name="sanpham">Sản Phẩm</string>
    <string name="khuyenmai">Khuyến mãi</string>
    <string name="tien">Tiền</string>
    <string name="gui">Gửi</string>
    <string name="call">Gọi tổng đài</string>
</resources>
