<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:id = "@+id/relativeLayout1"
        android:layout_width = "match_parent"
        android:layout_height = "match_parent"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/ten"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="2dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/tensanpham" />
        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/color_Cell"/>
        <TextView
            android:layout_width = "0dp"
            android:layout_height = "match_parent"
            android:layout_weight = "2"
            android:gravity = "center"
            android:text = "@string/giatien"
            android:id="@+id/giatien"
            />
        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/color_Cell"/>

        <TextView
            android:id="@+id/trangthai"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.5"
            android:gravity="center"
            android:text="@string/trangthai" />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/color_Cell"/>
        <ImageView
            android:layout_width = "0dp"
            android:layout_height = "match_parent"
            android:layout_weight = "1"
            android:gravity = "center"
            android:text = "@string/huy"
            android:src="@drawable/ic_highlight_delete"
            android:id="@+id/imghuy"
            />
    </LinearLayout>
</RelativeLayout>
