<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.blue.gasbuy.Activity.SoGasActivity"
    android:id="@+id/activity_sogas">
    <LinearLayout
        android:id = "@+id/relativeLayout1"
        android:layout_width = "fill_parent"
        android:layout_height = "wrap_content"
        android:paddingTop="3dp"
        android:background = "@color/color_table"
        >
        <TextView
            android:layout_width = "0dp"
            android:layout_height = "wrap_content"
            android:layout_weight = "1"
            android:gravity = "center"
            android:layout_marginBottom="2dp"
            android:background="@drawable/cell_shape"
            android:padding = "5dp"
            android:text = "@string/stt"
            android:textColor = "@color/color_Cell" />

        <TextView
            android:layout_width = "0dp"
            android:layout_height = "wrap_content"
            android:layout_weight = "1.5"
            android:background="@drawable/cell_shape"
            android:gravity = "center"
            android:padding = "5dp"
            android:text = "@string/ngaythang"
            android:textColor = "@color/color_Cell" />

        <TextView
            android:layout_width = "0dp"
            android:layout_height = "wrap_content"
            android:layout_weight = "1.5"
            android:background="@drawable/cell_shape"
            android:gravity = "center"
            android:padding = "5dp"
            android:text = "@string/sanpham"
            android:textColor = "@color/color_Cell" />

        <TextView
            android:layout_width = "0dp"
            android:layout_height = "wrap_content"
            android:layout_weight = "2"
            android:background="@drawable/cell_shape"
            android:gravity = "center"
            android:padding = "5dp"
            android:text = "@string/khuyenmai"
            android:textColor = "@color/color_Cell" />
        <TextView
            android:layout_width = "0dp"
            android:layout_height = "wrap_content"
            android:layout_weight = "1.2"
            android:background="@drawable/cell_shape"
            android:gravity = "center"
            android:padding = "5dp"
            android:text = "@string/tien"
            android:textColor = "@color/color_Cell" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ListView
            android:id="@+id/listviewSoGas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_round"
            android:divider="@color/color_Cell"
            android:dividerHeight="2dp" />
    </LinearLayout>
</LinearLayout>
