<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white">
<LinearLayout
    android:padding="@dimen/pading_small"
    android:orientation="vertical"
    android:gravity="center_horizontal"

    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="155dp" >
    <TextView
        android:gravity="center"
        android:text="T"
        android:textSize="60dp"
        android:textColor="@color/colorAccent"
           android:background="@drawable/khach_hang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    <TextView
        android:layout_marginTop="2dp"
        android:text="Thanh Tung"
        android:textColor="@android:color/white"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/button_khachHang"
        android:clickable="true"
         android:textSize="7dp"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:text="@string/thay_doi"/>
</LinearLayout>
<LinearLayout

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout

        android:clickable="true"
        android:layout_marginTop="40dp"
        android:padding="@dimen/pading_small"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:paddingRight="@dimen/pading_small"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/don_hang"/>
        <TextView
            android:textSize="@dimen/text_small"
            android:gravity="center_vertical"
            android:layout_weight="6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/Don_Hang"
            android:id="@+id/lbDonHang"/>
    </LinearLayout>
    <LinearLayout
        android:clickable="true"
        android:padding="@dimen/pading_small"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:paddingRight="@dimen/pading_small"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_so_ga"/>
        <TextView
            android:textSize="@dimen/text_small"
            android:gravity="center_vertical"
            android:layout_weight="6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/so_ga"/>
    </LinearLayout>
    <LinearLayout
        android:clickable="true"
        android:padding="@dimen/pading_small"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:paddingRight="@dimen/pading_small"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_qua_tang"/>
        <TextView
            android:textSize="@dimen/text_small"
            android:gravity="center_vertical"
            android:layout_weight="6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/qua_tang"/>
    </LinearLayout>
    <LinearLayout
        android:clickable="true"
        android:padding="@dimen/pading_small"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView

            android:paddingRight="@dimen/pading_small"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_ho_tro"/>
        <TextView
            android:textSize="@dimen/text_small"
            android:gravity="center_vertical"
            android:layout_weight="6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/ho_tro"/>
    </LinearLayout>
    <LinearLayout
        android:clickable="true"
        android:padding="@dimen/pading_small"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:paddingRight="@dimen/pading_small"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_danh_gia"/>
        <TextView
            android:textSize="@dimen/text_small"
            android:gravity="center_vertical"
            android:layout_weight="6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/danh_gia"/>
    </LinearLayout>
    <LinearLayout
        android:clickable="true"
        android:padding="@dimen/pading_small"


        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:paddingRight="@dimen/pading_small"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_cai_dat"/>
        <TextView
            android:textSize="@dimen/text_small"
            android:gravity="center_vertical"
            android:layout_weight="6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/cai_dat"/>
    </LinearLayout>


</LinearLayout>
</LinearLayout>
