<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_khach_hang"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.blue.gasbuy.Activity.KhachHangActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:background="@color/colorPrimary" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/khach_hang"
            android:gravity="center"
            android:text="T"
            android:textColor="@color/colorAccent"
            android:textSize="60dp" />
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:text="Thanh Tung"
        android:textSize="20dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ten" />

        <EditText
            android:textSize="@dimen/text_tb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Tong Thanh Tung" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Dia_chi" />

        <EditText
            android:textSize="@dimen/text_tb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Ha dong Ha noi" />

        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/So_dien_thoai" />
<LinearLayout
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
       <EditText
           android:textSize="@dimen/text_tb"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="+84"/>
        <EditText
            android:textSize="@dimen/text_tb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             android:hint="01692537685" />
</LinearLayout>
        <Button
            android:clickable="true"
            android:textSize="@dimen/text_tb"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/Dang_ky" />
    </LinearLayout>
</LinearLayout>
