<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_san_pham2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.blue.gasbuy.Activity.SanPhamActivity">

    <ScrollView
        android:id="@+id/scollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtten"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="Bếp gas đôi hồng ngoại Fujishi FM-H07 (Đen)"
                android:textColor="@color/colorText"
                android:textSize="@dimen/text_tb" />

            <TextView
                android:id="@+id/txtgia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"

                android:paddingLeft="30dp"
                android:paddingRight="30dp"
                android:text="200.000 VND"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="@dimen/text_tb" />

            <ImageView
                android:id="@+id/imgSanpham"
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:layout_gravity="center"
                android:src="@drawable/bepga" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/write_dark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:text="@string/thong_tin"
                android:textSize="17dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtThong_tin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/write_dark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:text="@string/thong_so"
                android:textSize="17dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtthong_so"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/write_dark" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:text="@string/bao_hanh"
                android:textSize="17dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtbao_hanh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:background="@color/write_dark" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/button_them_san_pham"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"

        android:backgroundTint="@android:color/holo_orange_dark"
        android:text="@string/mua_ngay" />
</LinearLayout>
