<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/activity_donhang"
    tools:context="com.example.blue.gasbuy.Activity.DonHangActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/color_table"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="00:00:00"
                android:gravity="center"
                android:textSize="24dp"
                android:id="@+id/txttimer"
                android:textColor="@color/color_Cell"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/color_Cell"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
        <LinearLayout
            android:id = "@+id/relativeLayout1"
            android:layout_width = "fill_parent"
            android:layout_height = "wrap_content"
            android:paddingTop="3dp"
            android:background = "@color/color_table"
            >
            <TextView
                android:layout_width = "0dp"
                android:layout_height = "wrap_content"
                android:layout_weight = "1"
                android:gravity = "center"
                android:layout_marginBottom="2dp"
                android:background="@drawable/cell_shape"
                android:padding = "5dp"
                android:text = "@string/tensanpham"
                android:textColor = "@color/color_Cell" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:background="@drawable/cell_shape"
                android:gravity="center"
                android:padding="5dp"
                android:text="@string/giatien"
                android:textColor="@color/color_Cell" />

            <TextView
                android:layout_width = "0dp"
                android:layout_height = "wrap_content"
                android:layout_weight = "1.5"
                android:background="@drawable/cell_shape"
                android:gravity = "center"
                android:padding = "5dp"
                android:text = "@string/trangthai"
                android:textColor = "@color/color_Cell" />
            <ImageView
                android:layout_width = "0dp"
                android:layout_height = "wrap_content"
                android:layout_weight = "1"
                android:gravity = "center"
                android:textColor = "@color/color_Cell"
                android:background="@drawable/cell_shape"
                android:src="@drawable/ic_highlight_delete"
                android:paddingBottom="5dp"
                android:id="@+id/btnhuy"/>
        </LinearLayout>
        <ListView
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_round"
            android:divider="@color/color_Cell"
            android:dividerHeight="2dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Đặt Hàng"
            android:id="@+id/btnDat"
            android:background="@drawable/bg_button"
            android:textColor="@color/color_Cell"
            android:layout_marginTop="5dp"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Hủy Hàng"
            android:id="@+id/btnHuy"
            android:background="@drawable/bg_button"
            android:textColor="@color/color_Cell"
            android:layout_marginTop="5dp"/>
    </LinearLayout>
</RelativeLayout>
